--- a/vignettes/suwo.Rmd
+++ b/vignettes/suwo.Rmd
@@ -85,6 +85,20 @@ dir_tree <- function(path) {
 ```
 
 
+::: {.alert .alert-info}
+
+The [suwo](https://github.com/maRce10/suwo) package aims to simplify the 
+retrieval of nature media (mostly photos, audio files and videos) across 
+multiple online biodiversity databases. This vignette provides an overview of 
+the package’s core querying functions, the searching and downloading of media 
+files, and the compilation of metadata from various sources. For detailed 
+information on each function, please refer to the 
+[function reference](https://maRce10.github.io/suwo/reference/index.html) 
+or use the help files within R (e.g., `?query_gbif`).
+
+:::
+
+
 ::: {.alert .alert-warning}
 
 **Intended use and responsible practices**
@@ -101,20 +115,6 @@ The package developers assume no liability for misuse of the retrieved data
 or violations of third-party terms of service.
 
 :::
-
-::: {.alert .alert-info}
-
-The [suwo](https://github.com/maRce10/suwo) package aims to simplify the 
-retrieval of nature media (mostly photos, audio files and videos) across 
-multiple online biodiversity databases. This vignette provides an overview of 
-the package’s core querying functions, the searching and downloading of media 
-files, and the compilation of metadata from various sources. For detailed 
-information on each function, please refer to the 
-[function reference](https://maRce10.github.io/suwo/reference/index.html) 
-or use the help files within R (e.g., `?query_gbif`).
-
-:::
-
 
 
 # Installation
@@ -421,7 +421,7 @@ query_summary[, c("Function", "Additional data")] |>
 
 <div class="alert alert-warning">
 
-*Obtaining raw data*
+**Obtaining raw data**
 
 By default the package standardizes the information in the basic fields (detailed above) in order to facilitate the compilation of metadata from multiple repositories. However, in some cases this may result in loss of information. For instance, some repositories allow users to provide "morning" as a valid time value, which are converted into NAs by [suwo](https://github.com/maRce10/suwo). In such cases, users can retrieve the original data by setting the `raw_data = TRUE` in the query functions and/or global options (`options(raw_data = TRUE)`). Note that subsequent data manipulation functions (e.g., [merge_metadata()](https://marce10.github.io/suwo/reference/merge_metadata.html), [find_duplicates()](https://marce10.github.io/suwo/reference/find_duplicates.html), etc) will not work properly as the basic fields are not standardized.
 
