fixed messaging function and unlinked verbose and pb

--- a/TO_DO_LIST.Rmd
+++ b/TO_DO_LIST.Rmd
@@ -8,12 +8,12 @@ editor_options:
 
 * update clements 2024 ✓
 * Control + shift + A to all code (might not fix long code lines) ✓
-* update past queries
-* continue failed queries
-* check downloads from download_media 
-* redo failed downloads from download_media
+* update past queries ✓
+* continue failed queries ✓
+* check downloads from download_media ✓
+* redo failed downloads from download_media ✓
 * fix pkgcheck diagnostics
-* make sure vignette can be rendered
+* make sure vignette can be rendered ✓
 * FROM HERE ADDED BY MAS:
 * Remove saving RDS in query functions ✓ 
 * replace argument "type" with "format" ✓
@@ -38,10 +38,10 @@ editor_options:
 * consider removing cores argument from query_wikiaves() as the server does not seem to like parallel queries
 * make sure vignette works with new changes ✓
 * check that all functions have examples 
-* check that all functions have references to original data sources
+* check that all functions have references to original data sources 
 * check that all functions have @return info
 * query_observation() search does not seem to include format
-* make "verbose" and "pb" independent
+* make "verbose" and "pb" independent ✓
 * Make sure parallel computing works in Windows (why do we have "cl.cores" in parallel::makePSOCKcluster(getOption("cl.cores", cores))?)
-* add informative message about whether there are duplicates when using find_duplicates()
-* add informative message about how many duplicates were removed and how many records remained to remove_duplicates()
+* add informative message about whether there are duplicates when using find_duplicates() ✓
+* add informative message about how many duplicates were removed and how many records remained to remove_duplicates() ✓
