--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ editor_options:
   [![Codecov test coverage](https://codecov.io/gh/maRce10/suwo/branch/master/graph/badge.svg)](https://app.codecov.io/gh/maRce10/suwo?branch=master)
 <!-- [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/suwo)](https://cran.r-project.org/package=suwo) -->
 <!-- [![Total Downloads](https://cranlogs.r-pkg.org/badges/grand-total/suwo)](https://cranlogs.r-pkg.org/badges/grand-total/suwo) -->
+[![Codecov test coverage](https://codecov.io/gh/maRce10/suwo/graph/badge.svg)](https://app.codecov.io/gh/maRce10/suwo)
 <!-- badges: end -->
   
 <!-- <img src="man/figures/suwo_sticker.png" alt="suwo logo" align="right" width = "25%" height="25%"/> -->
