--- a/README.Rmd
+++ b/README.Rmd
@@ -78,5 +78,5 @@ Take a look at the [package vignette](./articles/suwo.html) for an overview of t
 
 Please cite [suwo](https://github.com/maRce10/suwo) as follows:
 
-Araya-Salas, M., & Elizondo-Calvo, J. 2023. suwo: access nature media
-repositories through R. R package version 0.1.0.
+Araya-Salas, M., J. Elizondo-Calvo & A. Rico-Guevara. 2025. suwo: access nature media
+      repositories through R. R package version 0.1.0.
