--- a/README.Rmd
+++ b/README.Rmd
@@ -21,13 +21,14 @@ editor_options:
   
 <!-- <img src="man/figures/suwo_sticker.png" alt="suwo logo" align="right" width = "25%" height="25%"/> -->
 
-<img src="man/figures/suwo_sticker.png" alt="suwo logo" align="right" width = "25%" height="25%"/>
+<!-- <img src="man/figures/logo.png" alt="suwo logo" align="right" width = "25%" height="25%"/> -->
+<!-- <a href="https://marce10.github.io/suwo"><img src="man/figures/logo.png" align="right" height="139" alt="suwo website" /></a> -->
 
-[suwo](https://github.com/maRce10/suwo) is intended streamline
+[suwo](https://marce10.github.io/suwo) is intended streamline
 searching/downloading of nature media files (e.g. audios, photos) from
 online repositories.
 
-[suwo](https://github.com/maRce10/suwo) offers functions for critical steps in the acquisition of data necessary to develop methods that require a large amount of data.
+[suwo](https://marce10.github.io/suwo) offers functions for critical steps in the acquisition of data necessary to develop methods that require a large amount of data.
 
 The main features of the package are:
 
@@ -68,13 +69,13 @@ library(suwo)
 
 ## Intended use and responsible practices
 
-The [suwo](https://github.com/maRce10/suwo) package is designed exclusively for non-commercial, scientific purposes, including research, education, and conservation. **Any commercial use of the data or media retrieved through this package is strictly prohibited** unless explicit, separate permission is granted directly from the original source platforms and content creators. Users are obligated to comply with the specific terms of service and data use policies of each source database, which often mandate attribution and similarly restrict commercial application. The package developers assume no liability for misuse of the retrieved data or violations of third-party terms of service.
+The [suwo](https://marce10.github.io/suwo) package is designed exclusively for non-commercial, scientific purposes, including research, education, and conservation. **Any commercial use of the data or media retrieved through this package is strictly prohibited** unless explicit, separate permission is granted directly from the original source platforms and content creators. Users are obligated to comply with the specific terms of service and data use policies of each source database, which often mandate attribution and similarly restrict commercial application. The package developers assume no liability for misuse of the retrieved data or violations of third-party terms of service.
 
-Take a look at the [package vignette](./articles/suwo.html) for an overview of the main features of the packages.
+Take a look at the [package vignette](https://marce10.github.io/suwo/articles/suwo.html) for an overview of the main features of the packages.
 
 ## Citation
 
-Please cite [suwo](https://github.com/maRce10/suwo) as follows:
+Please cite [suwo](https://marce10.github.io/suwo) as follows:
 
 Araya-Salas, M., J. Elizondo-Calvo & A. Rico-Guevara. 2025. suwo: access nature media
       repositories through R. R package version 0.1.0.
