--- a/README.Rmd
+++ b/README.Rmd
@@ -73,8 +73,15 @@ remotes::install_github("maRce10/suwo")
 library(suwo)
 ```
 
+# Basic workflow for obtaining nature media files
 
-Take a look at the [package vignette](https://marce10.github.io/suwo/articles/suwo.html) for an overview of the core querying functions, and the package's workflow to obtain, organized and curate media files from various sources.
+Finding data using [suwo](https://marce10.github.io/suwo/) follows a basic 
+sequence. The following diagram illustrates this workflow and the main functions
+involved:
+
+<center><img src="./vignettes/workflow_diagram.png" alt="suwo workflow diagram" width="100%"></center>
+
+Take a look at the [package vignette](https://marce10.github.io/suwo/articles/suwo.html) for an overview of the workflow and the core querying functions.
 
 ## Intended use and responsible practices
 
