--- a/vignettes/suwo.Rmd
+++ b/vignettes/suwo.Rmd
@@ -141,7 +141,7 @@ library(suwo)
 
 # Basic workflow for obtaining nature media files
 
-Finding data using [suwo](https://marce10.github.io/suwo/) follows a basic 
+Obtaining nature media using [suwo](https://marce10.github.io/suwo/) follows a basic 
 sequence. The following diagram illustrates this workflow and the main functions
 involved:
 
